<resources>
    <string name="app_name">Fluint</string>
    <string name="title_activity_login_or_sign_up">LoginOrSignUpActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register_with">Register with:</string>
    <string name="or">or</string>
    <string name="sign_up_here">New? Sign up here.</string>
    <string name="hello_welcome">Hello!</string>
    <string name="returning">Back at it.</string>
    <string name="login_with">Login with:</string>
    <string name="forgot_password">Lost password?</string>
    <string name="facebook_app_id">390666267810624</string>


    <string-array name="tabs">
        <item>EXISTING USER</item>
        <item>NEW USER</item>
    </string-array>
    <string name="title_activity_main_feed">MainFeedActivity</string>
    <string name="title_activity_continue_sign_up">ContinueSignUpActivity</string>
    <string name="title_activity_user_preferences">UserPreferencesActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="nav_buy">Buy</string>
    <string name="nav_sell">Sell</string>
    <string name="nav_all">All</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="buy">Buy</string>
    <string name="settings">Settings</string>
    <string name="log_out_button">Log Out Button</string>
    <string name="logout">Log out</string>
    <string name="buy_preference">Buy preference</string>
    <string name="sell_preference">Sell preference</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="currency_type">New Text</string>
    <string name="sell">Sell</string>
    <string name="amount">Amount</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_make_fspick_loc">MakeFSPickLocActivity</string>
    <string name="title_activity_fspick_loc">FSPickLocActivity</string>
    <string name="title_activity_query_buy_request">QueryBuyRequest</string>
    <string name="search_distance">Radius Adjuster</string>
    <string name="country_preference">Country preference</string>
    <string name="browse">Browse</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="title_activity_post_details">PostDetailsActivity</string>
</resources>
