<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="Buying"
        android:key="@string/buy_preference"
        android:summary="Choose the currency you are interested in buying"
        android:defaultValue="None"
        android:entries="@array/CurrencyCodes"
        android:entryValues="@array/CurrencyCodesValues"/>

    <ListPreference
        android:title="Selling"
        android:key="@string/sell_preference"
        android:summary="Choose the currency you are interest in selling"
        android:defaultValue="None"
        android:entries="@array/CurrencyCodes"
        android:entryValues="@array/CurrencyCodesValues" />

    <Preference
        android:title="Search Distance"
        android:key="@string/search_distance" />


    <Preference
        android:title="@string/logout"
        android:key="@string/log_out_button" />

    <EditTextPreference android:title="Your Name"
        android:key="username"
        android:summary="Please provide your username"></EditTextPreference>
    <CheckBoxPreference android:title="Application Updates"
        android:defaultValue="false"
        android:summary="This option if selected will allow the application to check for latest versions."
        android:key="applicationUpdates" />

</PreferenceScreen>