<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/existingUserFragmentContainer"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/returningTextContainer"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/returning"
            android:id="@+id/returningWelcomeText"
            android:gravity="center"
            android:textSize="55sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginEmailPwContainer"
        android:layout_weight="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center|center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etLoginEmail"
            android:hint="@string/email"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etLoginPassword"
            android:hint="@string/password"
            android:layout_marginBottom="8dp"/>

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ibLoginButton" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:gravity="center"
        android:id="@+id/orLoginContainer"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:id="@+id/orLoginText"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginFGContainer"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_with"
            android:id="@+id/loginWithText"
            android:textSize="20sp"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ibSocialLoginContainer">

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ibLoginFacebook"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ibLoginGoogle"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:gravity="center_vertical|right"
        android:id="@+id/forgotPWHolder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/forgotPassword"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>