<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eia.fluint.TransactionAirportFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewBuyToggleIndex"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            card_view:cardBackgroundColor="@color/whiteColor"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/buyToggleIndex"
                android:layout_gravity="center"
                android:text="@string/buy"
                android:textColor="@color/accentColor"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="16sp"
                android:textAllCaps="true" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@color/whiteColor"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/sellToggleIndex"
                android:layout_gravity="center"
                android:text="@string/sell"
                android:textColor="@color/accentColor"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="16sp"
                android:textAllCaps="true"/>


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Currency"
                android:id="@+id/textCurrencyType"
                android:textColor="@color/accentColor"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCurrencyPost"
                android:entries="@array/CurrencyCodesValues" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/tvAmountPost"
                android:textSize="16sp"
                android:textColor="@color/accentColor"/>

            <EditText
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etAmountPost" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arrival date"
                android:id="@+id/tvArrivalDate"
                android:textColor="@color/accentColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></LinearLayout>
    </LinearLayout>

</LinearLayout>
